--- a/assets/sass/abstracts/_utility.scss
+++ b/assets/sass/abstracts/_utility.scss
@@ -62,6 +62,11 @@
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ff0000', endColorstr='#00ff0000',GradientType=1 ); /* IE6-9 */
 }
 
+//Overflow
+.over-hid {
+  overflow: hidden;
+}
+
 //Spacing
 .m-r-ini {
   margin-right: initial;
@@ -235,6 +240,10 @@
   padding-top: 5rem;
 }
 
+.p-t-54 {
+  padding-top: 5.4rem;
+}
+
 .p-t-60 {
   padding-top: 6rem;
 }
@@ -301,6 +310,10 @@
 
 .p-b-50 {
   padding-bottom: 5rem;
+}
+
+.p-b-54 {
+  padding-bottom: 5.4rem;
 }
 
 .p-b-65 {
@@ -534,6 +547,9 @@
   .p-b-22-lg {
     padding-bottom: 2.2rem;
   }
+  .p-b-49-lg {
+    padding-bottom: 4.9rem;
+  }
 
   .p-b-69-lg {
     padding-bottom: 6.9rem;
@@ -578,7 +594,9 @@
   .p-t-ini-lg {
     padding-top: initial;
   }
-
+  .p-t-49-lg {
+    padding-top: 4.9rem;
+  }
   .p-t-130-lg {
     padding-top: 13rem;
   }
