--- a/assets/sass/layout/_grid.scss
+++ b/assets/sass/layout/_grid.scss
@@ -2,14 +2,13 @@
   max-width: 1170px;
   width: 100%;
   margin: 0 auto;
-  overflow: hidden;
 }
 
 .container-fluid {
   max-width: 100%;
   margin: 0 auto;
   width: 100%;
-  overflow: hidden;
+  // overflow: hidden;
 }
 
 //Display
