--- a/assets/sass/pages/_home.scss
+++ b/assets/sass/pages/_home.scss
@@ -1,4 +1,5 @@
-body {
+body,
+section {
   overflow-x: hidden;
 }
 
